2005-03-27  Andrew Lunn  <andrew.lunn@ascom.ch>

	* include/time.h: Added CYGBLD_ATTRIB_STRFTIME_FORMAT where
	appropriate so the compiler does more checking.

2004-08-08  Bart Veer  <bartv@ecoscentric.com>

	* src/strptime.cxx: fix spelling

2003-08-18  Andrew Lunn  <andrew.lunn@ascom.ch>

	* src/strptime.cxx: Added string.h to fix compile warnings.  
	* cdl/time.cdl: Updated the requires statement for BSD string
	functions to use the interface rather than the option name.
	
2003-06-26  Brij Bihari Pandey  <fuzzhead012@yahoo.com>
2003-06-26  Jonathan Larmour  <jifl@eCosCentric.com>

	* tests/clock.c (main): Add a fudge factor in case the absolute values
	from clock() are small, in which case the percentage variation
	would be large.

2003-06-13  Jonathan Larmour  <jifl@eCosCentric.com>

	* tests/clock.c (main): Avoid div-by-zero if mean==0.

	* cdl/time.cdl: build all POSIX files all the time because they
	are used internally by the standard ISO C functions even if not
	exported.
	[Bug 1000001]

2003-04-24  Robert Cragie  <rcc@jennic.com>

	* include/time.inl:
	* include/timeutil.h:
	* src/timeutil.cxx:
	Change return type of cyg_libc_time_itoa() to cyg_ucount8.
	* src/strftime.cxx:
	Change return type of do_format() to cyg_count8.
	These benign changes get around a compiler bug using or32-elf-gcc

2003-03-18  Gary Thomas  <gary@mlbassoc.com>

	* src/strptime.cxx: Initialize time structure to a well known, valid,
	time/date so even if there is an error, it still makes [some] sense.

2003-02-24  Jonathan Larmour  <jifl@eCosCentric.com>

	* cdl/time.cdl: Fix doc link.

2003-01-28  Jonathan Larmour  <jifl@eCosCentric.com>

	* cdl/time.cdl: Correct reference to
	CYGSEM_LIBC_TIME_POSIX_TIME_ROUTINES in CYGPKG_LIBC_TIME_TESTS to
	CYGFUN_LIBC_TIME_POSIX.

2003-01-27  Gary Thomas  <gary@mlbassoc.com>

	* tests/strptime.c: 
	* src/strptime.cxx: 
	* include/time.h: 
	* cdl/time.cdl: Add support for strptime().

2002-05-14  Jesper Skov  <jskov@redhat.com>
